--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Domas Radzevicius</title>
-  <base href="https://domrad.github.io/">  <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
+  <head>
+    <meta charset="utf-8" />
+    <title>Domas Radzevicius</title>
+    <base href="https://domrad.github.io/">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.fa278a39444b9762d3e3.css"></head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.18d3e46dc6abc6b17662.js"></script><script type="text/javascript" src="scripts.409c517b457c0a5c5155.js"></script><script type="text/javascript" src="main.844d622c1a9881cf359e.js"></script></body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="styles.fa278a39444b9762d3e3.css"></head>
+  <body>
+    <script>
+      screen.orientation.lock("portrait");
+    </script>
+    <app-root></app-root>
+  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.18d3e46dc6abc6b17662.js"></script><script type="text/javascript" src="scripts.409c517b457c0a5c5155.js"></script><script type="text/javascript" src="main.4dee80cf0d4da225f33c.js"></script></body>
 </html>
