--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Domas Radzevicius</title>
-    <base href="https://domrad.github.io/">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
+    <base href="https://domradz.com">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="styles.fa278a39444b9762d3e3.css"></head>
+  <link rel="stylesheet" href="styles.9bbeacde1d1f9f8d1f4c.css"></head>
   <body>
     <script>
       screen.orientation.lock("portrait");
