--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Domas Radzevicius</title>
-    <base href="https://domrad.github.io/">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
+    <base href="https://domradz.com">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="styles.fa278a39444b9762d3e3.css"></head>
+  <link rel="stylesheet" href="styles.css"></head>
   <body>
-    <script>
-      screen.orientation.lock("portrait");
-    </script>
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.18d3e46dc6abc6b17662.js"></script><script type="text/javascript" src="scripts.409c517b457c0a5c5155.js"></script><script type="text/javascript" src="main.f64760f18c50ff7c5027.js"></script></body>
+  <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
