--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Domas Radzevicius</title>
-    <base href="https://www.domradz.com/">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
+    <base href="https://domradz.com/">    <script src="https://kit.fontawesome.com/318942b7cb.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
